# NetBricks

./: Cargo.toml  LICENSE.md  README.md  build.sh  examples.sh  prepare_os.sh  rustfmt.toml
framework/: Cargo.toml  build.rs  out.txt  test.sh
framework/src/: lib.rs
framework/src/allocators/: cache_aligned.rs
framework/src/common/: errors.rs  mod.rs
framework/src/config/: config_reader.rs  flag_reader.rs  mod.rs
framework/src/control/: mod.rs  sctp.rs  tcp.rs
framework/src/control/linux/: epoll.rs
framework/src/headers/: arp.rs  ip.rs  mac.rs  mod.rs  null_header.rs  tcp.rs  udp.rs
framework/src/interface/: dpdk.rs  mod.rs  packet.rs  pdu.rs
framework/src/interface/port/: fdir.rs  mod.rs  phy_port.rs  virt_port.rs
framework/src/native/zcsi/: ethdev.rs  mbuf.h  mbuf.rs  mbuf_impl.rs  mod.rs  ol_flags.h  ol_flags.rs  rssflows.rs  rte_common.h  rte_config.h  rte_dev.h  rte_eth_ctrl.h  rte_ethdev.h  rte_ethdev_api.rs  rte_log.h  rte_mbuf_api.rs  rte_mbuf_core_api.rs  run_bindgen.sh  zcsi.rs
framework/src/operators/: act.rs  add_metadata.rs  add_metadata_mut.rs  composition_batch.rs  deparsed_batch.rs  drop.rs  filter_batch.rs  group_by.rs  iterator.rs  macros.rs  map_batch.rs  merge_batch.rs  merge_batch_auto.rs  mod.rs  packet_batch.rs  parsed_batch.rs  receive_batch.rs  reset_parse.rs  restore_header.rs  send_batch.rs  transform_batch.rs
framework/src/queues/: mpsc_mbuf_queue.rs
framework/src/scheduler/: context.rs  mod.rs  standalone_scheduler.rs
framework/src/shared_state/: directory.rs  shared_vec.rs
framework/src/state/: cp_mergeable.rs  dp_mergeable.rs  mergeable.rs
framework/src/state/reordered_buffer/: reordered_buffer.rs
framework/src/utils/: check.rs  flow.rs  ip.rs  mod.rs
native/: Makefile  ethpacket.c  fdir.c  flow.c  init.c  kni.c  mempool.c  pmd.c  utils.c
native/include/: fdir.h  mempool.h  pmd.h
test/acl-fw/: Cargo.toml
test/acl-fw/src/: main.rs  nf.rs
test/chain-test/: Cargo.toml
test/chain-test/src/: main.rs  nf.rs
test/config-test/src/: main.rs
test/delay-test/: Cargo.toml
test/delay-test/src/: main.rs  nf.rs
test/framework-test/: Cargo.toml
test/framework-test/src/: main.rs
test/framework/src/: main.rs
test/lpm/: Cargo.toml
test/lpm-embedded/src/: main.rs
test/lpm/src/: main.rs  nf.rs
test/macswap/: Cargo.toml
test/macswap/src/: main.rs  nf.rs
test/maglev/: Cargo.toml
test/maglev/src/: main.rs  nf.rs
test/nat/: Cargo.toml
test/nat/src/: main.rs  nf.rs
test/packet_generation/: Cargo.toml
test/packet_generation/src/: main.rs  nf.rs
test/packet_test/: Cargo.toml
test/packet_test/src/: main.rs  nf.rs
test/reset-parse/: Cargo.toml
test/reset-parse/src/: main.rs
test/sctp-test/src/: control.rs  main.rs
test/shutdown-test/: Cargo.toml
test/shutdown-test/src/: main.rs  nf.rs
test/tcp_check/: Cargo.toml
test/tcp_check/src/: main.rs  nf.rs
test/tcp_payload/: Cargo.toml
test/tcp_payload/data/: expect.out
test/tcp_payload/src/: main.rs  nf.rs
test/tcp_reconstruction/: Cargo.toml
test/tcp_reconstruction/src/: main.rs  nf.rs
