[workspace]
members=["framework",
        "test/framework",
        "test/delay-test",
        "test/macswap",
        "test/shutdown-test",
        "test/chain-test",
        "test/lpm",
        "test/nat",
        "test/maglev",
        "test/packet_generation",
        "test/packet_test",
        "test/tcp_check",
        "test/tcp_payload",
#        "test/sctp-test",
        "test/config-test",
        "test/tcp_reconstruction",
        "test/acl-fw",]
[profile.release]
opt-level = 3
lto = true
rpath = true
debug = true
debug-assertions = false
