[package]
name = "e2d2"
version = "0.5.0"
authors = ["Aurojit Panda <apanda@cs.berkeley.edu>", "rainer <rainer@spacebandit.de>"]
build = "build.rs"

[lib]
doctest = false

[dependencies]
# we had to fallback to libc 0.2.43, 0.2.44 runs into compile error (core::ffi::c_void not found )
libc = ">= 0.2.43"
time = ">=0.1.0"
chashmap = ">= 2.2.0"
log = "0.3"
getopts = "*"
byteorder = "*"
fnv = "*"
twox-hash = "*"
regex = "*"
lazy_static = "*"
net2 = "*"
# NIX restricts us to just unix for now, we can fix this if someone cares at a later point.
nix = ">=0.10.0"
# Figure out if we want this permanently or just for now.
rust-sctp = { git="https://github.com/netsys/rust-sctp", optional = true}
toml = ">=0.4"
# Hack for SHM
uuid= { version = ">=0.7", features=["v4"] }
error-chain = ">=0.12"
tokio-core=">=0.1.8"
futures=">=0.1.14"
eui48 = { version= ">=0.3" }
separator =  ">= 0.3"
serde_derive = "1.0"
serde = "1.0"

[features]
default = []
performance = []
packet_offset = []
sctp = ["rust-sctp"]
