[package]
name = "zcsi-chain"
version = "0.1.0"
authors = ["Aurojit Panda <apanda@cs.berkeley.edu>"]

[dependencies]
e2d2 = { path = "../../framework", features = ["performance"] }
time = ">=0.1.0"
getopts = "*"
rand = "0.3"
fnv = "*"
eui48 = "0.3"
uuid = { version = ">=0.7", features = ["v4"] }

[features]
default = []
print = []
