[package]
name = "zcsi-pkt"
version = "0.1.0"
authors = ["Aurojit Panda <apanda@cs.berkeley.edu>"]

[dependencies]
e2d2 = { path = "../../framework", features = ["performance"] }
time = ">=0.1.0"
getopts = "*"
rand = "0.3"
fnv = "*"
eui48 = { git= "https://github.com/readysettech/eui48.git", version= ">=1.1", features=["serde"] , default-features= false}
uuid = { version = ">=0.7", features = ["v4"] }

[features]
default = []
print = []
